--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,26 +1,23 @@
 {
-  "proxy": "http://localhost:4000",
+  "proxy": "http://localhost:4000/",
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.11.3",
+    "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.1",
     "@mui/styled-engine": "^5.15.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.12.4",
-    "brace": "^0.11.1",
     "date-fns": "^2.28.0",
+    "nodemon": "^3.0.2",
     "react": "^18.1.0",
-    "react-ace": "^10.1.0",
     "react-dom": "^18.1.0",
-    "react-redux": "^9.0.4",
     "react-router-dom": "^6.20.1",
     "react-scripts": "^5.0.1",
-    "react-slick": "^0.29.0",
-    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
