--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,12 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.12.4",
+    "brace": "^0.11.1",
     "date-fns": "^2.28.0",
+    "moment": "^2.30.1",
     "nodemon": "^3.0.2",
     "react": "^18.1.0",
+    "react-ace": "^10.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.20.1",
     "react-scripts": "^5.0.1",
