--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "antd": "^5.12.4",
     "brace": "^0.11.1",
     "date-fns": "^2.28.0",
+    "jwt-decode": "^4.0.0",
     "nodemon": "^3.0.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
